More small edits for doc/lispref/minibuf.texi
* doc/lispref/minibuf.texi (Object from Minibuffer):
Remove overly pedantic paragraph.
(Minibuffer History): Copyedits.  Add face-name-history.
(Initial Input, Yes-or-No Queries, Multiple Queries)
(Minibuffer Windows, Minibuffer Misc): Copyedits.
(Yes-or-No Queries): Tweak example.
(Minibuffer Commands): Add next-complete-history-element.
(Minibuffer Misc): Mention minibuffer-message-timeout, and
minibuffer-inactive-mode.

* doc/lispref/minibuf.texi (Minibuffers):
* doc/lispref/elisp.texi, doc/lispref/vol1.texi, doc/lispref/vol2.texi:
Fix minibuffer subsection order.

* lisp/subr.el: Comment.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,17 @@
 2012-04-19  Glenn Morris  <rgm@gnu.org>
 
+	* minibuf.texi (Object from Minibuffer): Remove overly pedantic para.
+	(Minibuffer History): Copyedits.  Add face-name-history.
+	(Initial Input, Yes-or-No Queries, Multiple Queries)
+	(Minibuffer Windows, Minibuffer Misc): Copyedits.
+	(Yes-or-No Queries): Tweak example.
+	(Minibuffer Commands): Add next-complete-history-element.
+	(Minibuffer Misc): Mention minibuffer-message-timeout, and
+	minibuffer-inactive-mode.
+
+	* minibuf.texi (Minibuffers):
+	* elisp.texi, vol1.texi, vol2.texi: Fix minibuffer subsection order.
+
 	* minibuf.texi: Standardize metasyntactic variables ("history", etc).
 	Use Texinfo-recommended form of quote+punctuation.
 	(Intro to Minibuffers): First minibuffer is #1, not #0.
