--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,14 +1,5 @@
 2012-04-19  Glenn Morris  <rgm@gnu.org>
 
-	* minibuf.texi (Object from Minibuffer): Remove overly pedantic para.
-	(Minibuffer History): Copyedits.  Add face-name-history.
-	(Initial Input, Yes-or-No Queries, Multiple Queries)
-	(Minibuffer Windows, Minibuffer Misc): Copyedits.
-	(Yes-or-No Queries): Tweak example.
-	(Minibuffer Commands): Add next-complete-history-element.
-	(Minibuffer Misc): Mention minibuffer-message-timeout, and
-	minibuffer-inactive-mode.
-
 	* minibuf.texi (Minibuffers):
 	* elisp.texi, vol1.texi, vol2.texi: Fix minibuffer subsection order.
 
@@ -18,6 +9,14 @@
 	Mention minibuffer-inactive-mode.
 	(Text from Minibuffer): Copyedits.
 	(Minibuffer History, Programmed Completion): Fix @var usage.
+	(Object from Minibuffer): Remove overly pedantic para.
+	(Minibuffer History): Copyedits.  Add face-name-history.
+	(Initial Input, Yes-or-No Queries, Multiple Queries)
+	(Minibuffer Windows, Minibuffer Misc): Copyedits.
+	(Yes-or-No Queries): Tweak example.
+	(Minibuffer Commands): Add next-complete-history-element.
+	(Minibuffer Misc): Mention minibuffer-message-timeout, and
+	minibuffer-inactive-mode.
 
 2012-04-18  Glenn Morris  <rgm@gnu.org>
 
